# 2026-Epita-Intelligence-Symbolique

./: README.md
L2-generation-niveaux/: main.py
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/app/: main.py  models.py
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/app/static/: app.js  index.html  style.css
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/data/: ai_history.graphrag  download_hotpotqa.py  hotpotqa.graphrag
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/data/ai_history/: 01_pioneers.txt  02_neural_networks.txt  03_deep_learning_revolution.txt  04_transformers_and_llms.txt  05_ai_companies.txt  06_reinforcement_learning.txt  07_ai_safety_and_ethics.txt
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/docs/: 2026-06-13-G3-graphrag-design.md  2026-06-13-G3-implementation-plan.md  2026-06-16-G3-embeddings-retriever-implementation-plan.md  2026-06-16-G3-graph-viz-embeddings-retriever-design.md  2026-06-16-G3-graph-viz-implementation-plan.md
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/graphrag_core/: extractor.py  graph.py  llm.py  pipeline.py  retriever.py
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/notebooks/: benchmark.ipynb
groupe-G3-GraphRAG-combine_Knowledge_Graphs_et_LLM_pour_le_RAG/tests/: test_api.py  test_extractor.py  test_graph.py  test_llm.py  test_pipeline.py  test_retriever.py
(+8 files in other folders)
