[project]
name = "groupe-g3-graphrag-combine-knowledge-graphs-et-llm-pour-le-rag"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.34.0",
    "datasets>=2.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "ipykernel>=7.3.0",
    "leidenalg>=0.10.2",
    "matplotlib>=3.11.0",
    "networkx>=3.3",
    "openai>=1.40.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "python-igraph>=0.11.6",
    "python-multipart>=0.0.9",
    "rdflib>=7.0.0",
    "requests>=2.32.0",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.30.0",
]
